<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startButton"
        style="@android:style/Widget.Material.Button"
        android:layout_width="@dimen/startMenu_button_width"
        android:layout_height="@dimen/startMenu_button_height"
        android:layout_marginTop="275dp"
        android:background="@color/colorGrey"
        android:layout_centerHorizontal="true"
        android:text="@string/play" />

    <Button
        android:id="@+id/optionButton"
        android:layout_width="@dimen/startMenu_button_width"
        android:layout_height="@dimen/startMenu_button_height"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGrey"
        android:text="@string/options" />

    <Button
        android:id="@+id/rankButton"
        android:layout_width="@dimen/startMenu_button_width"
        android:layout_height="@dimen/startMenu_button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="405dp"
        android:background="#A9A9A9"
        android:text="@string/rank" />

</RelativeLayout>